# flink-samples

./: .editorconfig  .gitignore  README.md
kafka-java/: README.md  docker-compose.yml  pom.xml
kafka-java/src/main/java/com/lakesail/flink/samples/basic/: Event.java  Job.java  JsonSchema.java
kafka-python/: README.md  pyproject.toml
kafka-python/src/demo/: basic.py
